--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-firebase-hooks": "^5.1.1",
-    "react-router-dom": "^7.6.2",
+    "@inertiajs/inertia": "^0.11.0",
+    "@inertiajs/inertia-react": "^0.8.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
